k8s/applications/media/arr/tautulli/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: arr
  labels:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/part-of: applications
    app.kubernetes.io/managed-by: argocd
spec:
  serviceName: tautulli
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: etc,var
      labels:
        app: tautulli
        app.kubernetes.io/name: tautulli
        app.kubernetes.io/part-of: applications
        app.kubernetes.io/managed-by: argocd
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: tautulli
          image: ghcr.io/vegops/tautulli:2.17.1-r2@sha256:7928167bb0481632afab2920a614365c42c9848e3ebe4e0bc83871b870861116
          ports:
            - name: http
              containerPort: 8181
          volumeMounts:
            - name: etc
              mountPath: /tautulli/etc
            - name: var
              mountPath: /tautulli/var
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8181
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8181
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: etc
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: proxmox-csi
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: var
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: proxmox-csi
        resources:
          requests:
            storage: 5Gi
