k8s/applications/media/arr/tautulli/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: tautulli
  ports:
    - name: http
      port: 8181
      targetPort: http
