k8s/applications/media/arr/tautulli/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: envoy-internal
      namespace: network
  hostnames:
    - tautulli.k8s.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tautulli
          port: 8181
